# backtrack-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust-bench.yml  rust-ci.yml
benches/: criterion.rs  n_queens.rs
dev/bench/: data.js
examples/: ascending.rs  count_up.rs  n_queens.rs  total_sum.rs
src/: lib.rs  problem.rs  solve.rs
src/impls/: ascending.rs
src/problems/: ascending.rs  bin_queens.rs  bit_queens.rs  count_up.rs  mod.rs  n_queens.rs  total_sum.rs  utils.rs
src/solvers/: cached.rs  mod.rs  naive.rs
tests/: ascending.rs  count_up.rs  total_sum.rs
tests/it/: bin_queens.rs  bit_queens.rs  common.rs  count_up.rs  main.rs  n_queens.rs  total_sum.rs  zero_sized.rs
