[package]
name = "backtrack-rs"
version = "0.1.0"
authors = ["ahirner <a.hirner@gmail.com>"]
edition = "2018"
categories = ["algorithms"]
description = "Backtracking solver with examples"
keywords = ["backtracking", "sat", "solver", "combinatorial", "search"]
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "n_queens"
harness = false