[package]
name = "backtrack"
version = "0.2.2"
authors = ["Alexander Hirner <a.hirner@gmail.com>"]
edition = "2018"

categories = ["algorithms"]
description = "Solve hard constraints easily"
keywords = ["backtracking", "sat", "solver", "combinatorial", "search"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ahirner/backtrack-rs"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion"
harness = false

[package.metadata.docs.rs]
# reduce docs.rs build time
targets = ["x86_64-unknown-linux-gnu"]
